--- a/index.html
+++ b/index.html
@@ -3,205 +3,203 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous Owned & Led Auto Financing in Canada</title>
-  <meta name="description" content="Indigenous-owned lead service in Canada. Dealers trained in Indigenous protocol. Transparent, Canadian info only.">
-  <meta property="og:title" content="Turtle Island Financing — Respectful Auto Financing">
-  <meta property="og:description" content="We connect you to trained partner dealerships. Transparent, honest, and culturally sensitive.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/hero-joyful-truck.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <title>Turtle Island Financing — Indigenous-Owned & CCAB Certified</title>
+  <meta name="description" content="100% Indigenous-owned auto financing. Protect your tax exemption. Honest deals with transparency and OCAP protection.">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/favicon.png">
-  <style>
-    .ccab-logo {
-      max-width: 220px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-    .hero-caption {
-      text-align: center;
-      font-weight: 600;
-      color: #444;
-      margin-top: .5rem;
-    }
-  </style>
 </head>
 <body>
+  <!-- Header -->
   <header class="site-header">
-    <div class="container nav">
-      <div class="brand">
-        <div class="logo">🐢</div>
-        <div class="brand-text">
-          <h1>Turtle Island Financing</h1>
-          <p class="tag">Indigenous-owned & led • Canada</p>
-        </div>
+    <div class="container header-container">
+      <div class="logo-text">
+        <h1>Turtle Island Financing</h1>
+        <p>100% Indigenous-Owned • CCAB Certified</p>
       </div>
-      <nav class="top-nav">
-        <a class='btn link' href='/supports'>Supports</a>
-        <a class='btn link' href='/verify'>Verify</a>
-        <a class='btn link' href='/dealers'>For Dealers</a>
-        <a class="btn ghost" href="#apply">Apply Now</a>
+      <nav class="header-nav">
+        <a href="#supports">Supports</a>
+        <a href="#verify">Verify</a>
+        <a href="#dealers">For Dealers</a>
+        <a href="#apply" class="btn">Apply Now</a>
       </nav>
     </div>
   </header>
 
+  <!-- Hero -->
   <section class="hero">
-    <div class="container hero-grid">
-      <div class="hero-copy">
-        <h2>At Turtle Island you are not only tax exempt, you are bad deal exempt, gimmick exempt, pressure exempt.</h2>
-        <p>We connect you with trained partner dealerships across Canada. Transparent, honest, and culturally sensitive from start to finish.</p>
-        <div class="hero-ctas">
-          <a class="btn" href="#apply">Start Pre-Approval</a>
-          <a class="btn link" href="#how-we-help">How We Help</a>
-          <a class='btn link' href='/supports'>Supports & Roadmap</a>
+    <div class="container hero-container">
+      <div class="hero-text">
+        <h2>Keep Your Tax Savings. Choose With Confidence.</h2>
+        <p><strong>At Turtle Island Financing, you’re not just tax-exempt — you’re exempt from bad deals, gimmicks, and pressure too.</strong></p>
+        <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
+        <div class="hero-buttons">
+          <a href="#apply" class="btn">Get Pre-Approved</a>
+          <a href="#comparison" class="btn-outline">See How It Works</a>
         </div>
-        <ul class="pill-list">
-          <li>No cost to you</li>
-          <li>No false promises</li>
-          <li>Tax exemption handled respectfully</li>
-          <li>Dealers trained by us</li>
-        </ul>
+        <div class="hero-badges">
+          <span class="badge">CCAB Certified</span>
+          <span class="badge">Trauma-informed & OCAP®-trained</span>
+          <span class="badge">Approved dealer network (TRC & FPIC)</span>
+          <span class="badge">Respectful tax-exemption handling</span>
+        </div>
       </div>
-      <div class="hero-art">
-        <img src="assets/hero-joyful-truck.png"
-             alt="Happy customer celebrating a new truck purchase — Turtle Island Financing"
-             loading="eager" fetchpriority="high" decoding="async" />
-        <p class="hero-caption">The only thing fake about Turtle Island Financing is this AI Picture 😅</p>
+      <div class="hero-image">
+        <img src="assets/hero-art.svg" alt="Turtle Island Financing">
       </div>
     </div>
   </section>
 
-  <section id="how-we-help" class="role">
+  <!-- Dealer Comparison -->
+  <section id="comparison" class="comparison">
     <div class="container">
-      <h3>Our Role in Your Financing Journey</h3>
-      <div class="cards">
-        <div class="card"><h4>Connect</h4><p>We match you with the best-suited partner dealership based on your needs, location, and situation.</p></div>
-        <div class="card"><h4>Prepare</h4><p>We publish a standard roadmap so you know what Canadian lenders typically require. No one-on-one planning needed.</p></div>
-        <div class="card"><h4>Mediate</h4><p>We stay in the loop to maintain respect, transparency, and clear communication throughout the process.</p></div>
-        <div class="card"><h4>Support</h4><p>We encourage dignity and cultural sensitivity from the first contact to the final decision.</p></div>
-      </div>
-    </div>
-  </section>
-
-  <section class="dealer-comparison">
-    <div class="container">
-      <h3>Dealer Comparison</h3>
-      <table class="comparison">
+      <h2>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h2>
+      <p>How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
+      <table>
         <thead>
           <tr>
-            <th>Turtle Island Financing</th>
+            <th>Line Item</th>
             <th>Unaffiliated Dealer</th>
+            <th>Turtle Island Financing</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Tax savings stay with you</td>
-            <td>Tax savings often lost in inflated pricing</td>
+            <td>Vehicle Price</td>
+            <td>$25,000</td>
+            <td>$25,000</td>
           </tr>
           <tr>
-            <td>Transparent, trauma-informed staff</td>
-            <td>Pressure tactics and upsells</td>
+            <td>Fees (doc + finance)</td>
+            <td>$1,090</td>
+            <td>$1,090</td>
           </tr>
           <tr>
-            <td>Dealers trained in Indigenous history & TRC</td>
-            <td>No cultural awareness</td>
+            <td>Taxes (GST+PST)</td>
+            <td>$3,129.80</td>
+            <td>$0 (Exempt)</td>
           </tr>
           <tr>
-            <td>OCAP® aligned privacy protection</td>
-            <td>Data sold or misused</td>
+            <td>Add-Ons / Cash Back</td>
+            <td>$4,780</td>
+            <td>$0 (optional)</td>
+          </tr>
+          <tr>
+            <td><strong>Amount Financed</strong></td>
+            <td><strong>$34,000</strong></td>
+            <td><strong>$26,090</strong></td>
+          </tr>
+          <tr>
+            <td>Monthly Payment (60mo @10%)</td>
+            <td>$722</td>
+            <td>$554</td>
+          </tr>
+          <tr>
+            <td><strong>Total of Payments</strong></td>
+            <td><strong>$43,320</strong></td>
+            <td><strong>$33,240</strong></td>
+          </tr>
+          <tr>
+            <td>Total Interest Paid</td>
+            <td>$9,320</td>
+            <td>$7,150</td>
           </tr>
         </tbody>
       </table>
+      <div class="cta">
+        <a href="#apply" class="btn">Protect My Savings → Apply Now</a>
+      </div>
     </div>
   </section>
 
-  <section id="apply" class="form-wrap">
-    <div class="container grid">
-      <div class="form-card">
-        <h3>Quick Pre-Approval</h3>
-        <p class="muted">We’ll share your application with a trained partner dealership in Canada. They may contact you by phone, SMS, or email.</p>
+  <!-- Why Choose Us -->
+  <section id="why" class="why-us">
+    <div class="container">
+      <h2>Why Trust Turtle Island Financing?</h2>
+      <ul class="checklist">
+        <li>✅ 100% Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma-informed & <strong>OCAP®-trained</strong> staff safeguard your data</li>
+        <li>✅ 20+ years serving Indigenous communities with dignity</li>
+        <li>✅ Only approved partner dealers trained by us in Indigenous history, Truth & Reconciliation, and our Transparent + FPIC model</li>
+      </ul>
+    </div>
+  </section>
 
-        <form action='/thank-you' id='leadForm' method='POST' name='preapproval'>
-          <input type="hidden" name="form-name" value="preapproval">
-
-          <div class="row">
-            <label>Full Name*<input type="text" name="name" required></label>
-            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
-          </div>
-          <div class="row">
-            <label>Email*<input type="email" name="email" required></label>
-            <label>Province/Territory*<select name="province" required>
-              <option value="">Select…</option>
-              <option>BC</option><option>AB</option><option>SK</option><option>MB</option>
-              <option>ON</option><option>QC</option><option>NB</option><option>NS</option>
-              <option>PE</option><option>NL</option><option>YT</option><option>NT</option><option>NU</option>
-            </select></label>
-          </div>
-          <div class="row">
-            <label>Estimated Credit<select name="credit">
-              <option value="">Prefer not to say</option><option>Excellent (720+)</option>
-              <option>Good (660–719)</option><option>Fair (600–659)</option>
-              <option>Building (&lt;600)</option><option>New to credit</option>
-            </select></label>
-            <label>Seeking<select name="seeking">
-              <option value="">Select…</option><option>Car</option><option>Truck</option><option>SUV</option><option>Van</option>
-            </select></label>
-          </div>
-          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="Seasonal fishing, self-employed, on-reserve delivery, timeline, budget…"></textarea></label>
-
-          <p class="muted small">🔒 Your information is protected under OCAP® principles — Ownership, Control, Access, and Possession. Turtle Island Financing will never sell or misuse your personal data.</p>
-
-          <label class="consent">
-            <input type="checkbox" name="consent" required>
-            I consent to my application being shared with partner dealerships for the purpose of securing financing.
-            I understand the dealership will perform a credit check as part of the process. I agree to receive communications related to my application.
+  <!-- Pre-Approval Form -->
+  <section id="apply" class="apply">
+    <div class="container apply-container">
+      <div class="form-section">
+        <h2>Quick Pre-Approval</h2>
+        <p><strong>OCAP® Protected:</strong> Your information is handled under Ownership, Control, Access, and Possession — your data remains yours and is only shared with approved partner dealers for financing.</p>
+        <form>
+          <label>Full Name* <input type="text" required></label>
+          <label>Date of Birth* <input type="date" required></label>
+          <label>Email* <input type="email" required></label>
+          <label>Phone* <input type="tel" required></label>
+          <label>Street Address* <input type="text" required></label>
+          <label>City* <input type="text" required></label>
+          <label>Province/Territory* <input type="text" required></label>
+          <label>Postal Code* <input type="text" required></label>
+          <label>Employer* <input type="text" required></label>
+          <label>Monthly Income* <input type="text" required></label>
+          <label>Employment Type* 
+            <select>
+              <option>Full-Time</option>
+              <option>Part-Time</option>
+              <option>Seasonal</option>
+            </select>
           </label>
-
-          <button type="submit" class="btn wide">Get Pre-Approved</button>
+          <label>Housing* 
+            <select>
+              <option>Own</option>
+              <option>Rent</option>
+              <option>Other</option>
+            </select>
+          </label>
+          <label>Seeking
+            <select>
+              <option>Car Loan</option>
+              <option>Truck Loan</option>
+              <option>SUV Loan</option>
+            </select>
+          </label>
+          <label>Estimated Credit
+            <select>
+              <option>Excellent</option>
+              <option>Good</option>
+              <option>Fair</option>
+              <option>Poor</option>
+              <option>Prefer not to say</option>
+            </select>
+          </label>
+          <label>Notes (optional)
+            <textarea></textarea>
+          </label>
+          <p class="consent">
+            <input type="checkbox" required> I consent to my application being shared with Turtle Island Financing approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
+          </p>
+          <button type="submit" class="btn">Get Pre-Approved</button>
         </form>
       </div>
 
-      <aside class="trust">
-        <h4>Trust &amp; Certification</h4>
-        <div class="ccab-badge" role="group" aria-label="Certification badge">
-          <img src="https://raw.githubusercontent.com/Brookeashleygroup/Turtle-Island-Financing/main/assets/CIB-LogoH-Colour%20(1).png" 
-               alt="Certified Aboriginal Business (CAB) — Canadian Council for Aboriginal Business" 
-               class="ccab-logo">
-          <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
-        </div>
-        <ul class="bullets">
+      <!-- Trust Section -->
+      <aside class="trust-section">
+        <h3>Trust & Certification</h3>
+        <img src="https://raw.githubusercontent.com/Brookeashleygroup/Turtle-Island-Financing/main/assets/CIB-LogoH-Colour%20(1).png" 
+             alt="CCAB Certified" 
+             class="ccab-logo">
+        <ul>
+          <li>Certified Aboriginal Business (CAB) Verified by the Canadian Council for Aboriginal Business (CCAB)</li>
           <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
           <li>100% Indigenous-owned and operated</li>
           <li>OCAP®-aligned, trauma-informed trained staff</li>
         </ul>
-        <div class="disclaimer">
-          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
-        </div>
       </aside>
     </div>
   </section>
 
   <footer class="site-footer">
-    <div class="container foot">
-      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong> • <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span></p>
-      <nav>
-        <a href="#apply">Apply</a>
-        <a href='/supports'>Supports</a>
-        <a href='/verify'>Verify</a>
-        <a href='/dealers'>For Dealers</a>
-        <a href='/standards'>Our Standards</a>
-        <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
-        <a href="#" onclick="window.alert('Privacy: We share your info only with partner dealers for financing.'); return false;">Privacy</a>
-      </nav>
+    <div class="container">
+      <p>© 2025 Turtle Island Financing. All rights reserved.</p>
     </div>
   </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-  <script src="script.js"></script>
 </body>
 </html>
