--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
       <!-- Trust Section -->
       <aside class="trust-section">
         <h3>Trust & Certification</h3>
-        <img src="https://raw.githubusercontent.com/Brookeashleygroup/Turtle-Island-Financing/main/assets/CIB-LogoH-Colour%20(1).png" 
-             alt="CCAB Certified" 
-             class="ccab-logo">
+        <img src="assets/CIB-LogoH-Colour (1).png" 
+     alt="CCAB Certified" 
+     class="ccab-logo">
         <ul>
           <li>Certified Aboriginal Business (CAB) Verified by the Canadian Council for Aboriginal Business (CCAB)</li>
           <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
