--- a/index.html
+++ b/index.html
@@ -3,203 +3,221 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Turtle Island Financing — Indigenous-Owned & CCAB Certified</title>
-  <meta name="description" content="100% Indigenous-owned auto financing. Protect your tax exemption. Honest deals with transparency and OCAP protection.">
+  <title>Turtle Island Financing — Transparent Indigenous Auto Financing</title>
+  <meta name="description" content="100% Indigenous-owned, CCAB-certified. We protect your tax exemption and support informed decisions with FPIC. Trauma-informed, OCAP®-trained staff.">
+  <meta property="og:title" content="Turtle Island Financing — Truth in Financing">
+  <meta property="og:description" content="Keep your tax savings. Choose with confidence. No gimmicks, no pressure — just transparent Indigenous auto financing.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/hero-joyful-truck.png">
+  <link rel="icon" href="assets/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
-    <div class="container header-container">
-      <div class="logo-text">
-        <h1>Turtle Island Financing</h1>
-        <p>100% Indigenous-Owned • CCAB Certified</p>
-      </div>
-      <nav class="header-nav">
-        <a href="#supports">Supports</a>
-        <a href="#verify">Verify</a>
-        <a href="#dealers">For Dealers</a>
-        <a href="#apply" class="btn">Apply Now</a>
+    <div class="container nav">
+      <a class="brand" href="/">
+        <!-- Using an existing asset so the logo shows up -->
+        <img class="logo" src="assets/hero-art.svg" alt="Turtle Island Financing logo" height="40">
+        <div class="brand-text">
+          <h1>Turtle Island Financing</h1>
+          <p class="tag">100% Indigenous‑Owned • CCAB Certified</p>
+        </div>
+      </a>
+      <nav class="top-nav">
+        <a class="btn link" href="/supports.html">Supports</a>
+        <a class="btn link" href="/verify.html">Verify</a>
+        <a class="btn link" href="/dealers.html">For Dealers</a>
+        <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero -->
   <section class="hero">
-    <div class="container hero-container">
-      <div class="hero-text">
+    <div class="container hero-grid">
+      <div class="hero-copy">
         <h2>Keep Your Tax Savings. Choose With Confidence.</h2>
-        <p><strong>At Turtle Island Financing, you’re not just tax-exempt — you’re exempt from bad deals, gimmicks, and pressure too.</strong></p>
+        <p class="slogan">At <strong>Turtle Island Financing</strong>, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
         <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
-        <div class="hero-buttons">
-          <a href="#apply" class="btn">Get Pre-Approved</a>
-          <a href="#comparison" class="btn-outline">See How It Works</a>
+        <div class="hero-ctas">
+          <a class="btn" href="#apply">Get Pre‑Approved</a>
+          <a class="btn link" href="#truth">See How It Works</a>
         </div>
-        <div class="hero-badges">
-          <span class="badge">CCAB Certified</span>
-          <span class="badge">Trauma-informed & OCAP®-trained</span>
-          <span class="badge">Approved dealer network (TRC & FPIC)</span>
-          <span class="badge">Respectful tax-exemption handling</span>
-        </div>
+        <ul class="pill-list">
+          <li>CCAB Certified</li>
+          <li>Trauma‑informed & OCAP®‑trained</li>
+          <li>Approved dealer network (TRC & FPIC)</li>
+          <li>Respectful tax‑exemption handling</li>
+        </ul>
       </div>
-      <div class="hero-image">
-        <img src="assets/hero-art.svg" alt="Turtle Island Financing">
-      </div>
+      <figure class="hero-art">
+  <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+  <figcaption class="hero-caption">
+    The only thing fake about Turtle Island Financing is this AI Picture 😅
+  </figcaption>
+</figure>
+
     </div>
   </section>
 
-  <!-- Dealer Comparison -->
-  <section id="comparison" class="comparison">
+  <!-- Truth in Financing -->
+  <section id="truth" class="truth-in-financing">
     <div class="container">
-      <h2>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h2>
-      <p>How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
-      <table>
+      <h3>Truth in Financing: Unaffiliated Dealer vs. Turtle Island Financing</h3>
+      <p class="muted">How some unaffiliated dealers inflate your loan vs. how Turtle Island Financing protects your savings.</p>
+      <table class="comparison">
         <thead>
-          <tr>
-            <th>Line Item</th>
-            <th>Unaffiliated Dealer</th>
-            <th>Turtle Island Financing</th>
-          </tr>
+          <tr><th>Line Item</th><th>Unaffiliated Dealer</th><th>Turtle Island Financing</th></tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Vehicle Price</td>
-            <td>$25,000</td>
-            <td>$25,000</td>
-          </tr>
-          <tr>
-            <td>Fees (doc + finance)</td>
-            <td>$1,090</td>
-            <td>$1,090</td>
-          </tr>
-          <tr>
-            <td>Taxes (GST+PST)</td>
-            <td>$3,129.80</td>
-            <td>$0 (Exempt)</td>
-          </tr>
-          <tr>
-            <td>Add-Ons / Cash Back</td>
-            <td>$4,780</td>
-            <td>$0 (optional)</td>
-          </tr>
-          <tr>
-            <td><strong>Amount Financed</strong></td>
-            <td><strong>$34,000</strong></td>
-            <td><strong>$26,090</strong></td>
-          </tr>
-          <tr>
-            <td>Monthly Payment (60mo @10%)</td>
-            <td>$722</td>
-            <td>$554</td>
-          </tr>
-          <tr>
-            <td><strong>Total of Payments</strong></td>
-            <td><strong>$43,320</strong></td>
-            <td><strong>$33,240</strong></td>
-          </tr>
-          <tr>
-            <td>Total Interest Paid</td>
-            <td>$9,320</td>
-            <td>$7,150</td>
-          </tr>
+          <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
+          <tr><td>Fees (doc + finance)</td><td>$1,090</td><td>$1,090</td></tr>
+          <tr><td>Taxes (GST+PST)</td><td>$3,129.80</td><td>$0 (Exempt)</td></tr>
+          <tr><td>Add‑Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
+          <tr><td><strong>Amount Financed</strong></td><td><strong>$34,000</strong></td><td><strong>$26,090</strong></td></tr>
+          <tr><td>Monthly Payment (60mo @10%)</td><td>$722</td><td>$554</td></tr>
+          <tr><td><strong>Total of Payments</strong></td><td><strong>$43,320</strong></td><td><strong>$33,240</strong></td></tr>
+          <tr><td>Total Interest Paid</td><td>$9,320</td><td>$7,150</td></tr>
         </tbody>
       </table>
-      <div class="cta">
-        <a href="#apply" class="btn">Protect My Savings → Apply Now</a>
+      <div class="cta-center">
+        <a class="btn wide" href="#apply">Protect My Savings → Apply Now</a>
       </div>
     </div>
   </section>
 
-  <!-- Why Choose Us -->
-  <section id="why" class="why-us">
+  <!-- Trust -->
+  <section class="why-choose">
     <div class="container">
-      <h2>Why Trust Turtle Island Financing?</h2>
+      <h3>Why Trust Turtle Island Financing?</h3>
       <ul class="checklist">
-        <li>✅ 100% Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
-        <li>✅ Trauma-informed & <strong>OCAP®-trained</strong> staff safeguard your data</li>
+        <li>✅ 100% Indigenous‑owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma‑informed & <strong>OCAP®‑trained</strong> staff safeguard your data</li>
         <li>✅ 20+ years serving Indigenous communities with dignity</li>
         <li>✅ Only approved partner dealers trained by us in Indigenous history, Truth & Reconciliation, and our Transparent + FPIC model</li>
       </ul>
     </div>
   </section>
 
-  <!-- Pre-Approval Form -->
-  <section id="apply" class="apply">
-    <div class="container apply-container">
-      <div class="form-section">
-        <h2>Quick Pre-Approval</h2>
-        <p><strong>OCAP® Protected:</strong> Your information is handled under Ownership, Control, Access, and Possession — your data remains yours and is only shared with approved partner dealers for financing.</p>
-        <form>
-          <label>Full Name* <input type="text" required></label>
-          <label>Date of Birth* <input type="date" required></label>
-          <label>Email* <input type="email" required></label>
-          <label>Phone* <input type="tel" required></label>
-          <label>Street Address* <input type="text" required></label>
-          <label>City* <input type="text" required></label>
-          <label>Province/Territory* <input type="text" required></label>
-          <label>Postal Code* <input type="text" required></label>
-          <label>Employer* <input type="text" required></label>
-          <label>Monthly Income* <input type="text" required></label>
-          <label>Employment Type* 
-            <select>
-              <option>Full-Time</option>
-              <option>Part-Time</option>
-              <option>Seasonal</option>
-            </select>
+  <!-- Apply -->
+  <section id="apply" class="form-wrap">
+    <div class="container grid">
+      <div class="form-card">
+        <h3>Quick Pre‑Approval</h3>
+        <p class="muted"><strong>OCAP® Protected:</strong> Your information is handled under Ownership, Control, Access, and Possession — your data remains yours and is only shared with approved partner dealers for financing.</p>
+
+        <form name="preapproval" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
+          <input type="hidden" name="form-name" value="preapproval">
+          <p style="position:absolute;left:-9999px;"><label>Don’t fill this out: <input name="bot-field"></label></p>
+          <input type="hidden" name="utm_source"><input type="hidden" name="utm_medium">
+          <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
+          <input type="hidden" name="utm_content">
+
+          <!-- Personal -->
+          <div class="row">
+            <label>Full Name*<input type="text" name="name" required></label>
+            <label>Date of Birth*<input type="date" name="dob" required></label>
+          </div>
+          <div class="row">
+            <label>Email*<input type="email" name="email" required></label>
+            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604‑555‑0123"></label>
+          </div>
+
+          <!-- Address -->
+          <div class="row">
+            <label>Street Address*<input type="text" name="address" required></label>
+            <label>City*<input type="text" name="city" required></label>
+          </div>
+          <div class="row">
+            <label>Province/Territory*<select name="province" required>
+              <option value="">Select…</option>
+              <option>BC</option><option>AB</option><option>SK</option><option>MB</option>
+              <option>ON</option><option>QC</option><option>NB</option><option>NS</option>
+              <option>PE</option><option>NL</option><option>YT</option><option>NT</option><option>NU</option>
+            </select></label>
+            <label>Postal Code*<input type="text" name="postal" required></label>
+          </div>
+
+          <!-- Employment & Income -->
+          <div class="row">
+            <label>Employer*<input type="text" name="employer" required></label>
+            <label>Monthly Income*<input type="number" name="income" required placeholder="CAD$"></label>
+          </div>
+          <div class="row">
+            <label>Employment Type<select name="employment">
+              <option>Full‑Time</option><option>Part‑Time</option><option>Seasonal</option>
+              <option>Self‑Employed</option><option>Other</option>
+            </select></label>
+            <label>Housing<select name="housing">
+              <option>Own</option><option>Rent</option><option>On‑Reserve</option><option>With Family</option>
+            </select></label>
+          </div>
+
+          <!-- Vehicle & Credit -->
+          <div class="row">
+            <label>Seeking<select name="seeking">
+              <option value="">Select…</option><option>Car</option><option>Truck</option><option>SUV</option><option>Van</option>
+            </select></label>
+            <label>Estimated Credit<select name="credit">
+              <option value="">Prefer not to say</option><option>Excellent (720+)</option>
+              <option>Good (660–719)</option><option>Fair (600–659)</option>
+              <option>Building (&lt;600)</option><option>New to credit</option>
+            </select></label>
+          </div>
+
+          <!-- Notes -->
+          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on‑reserve delivery, budget, timeline…"></textarea></label>
+
+          <!-- Consent -->
+          <label class="consent">
+            <input type="checkbox" name="consent" required>
+            I consent to my application being shared with Turtle Island Financing approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
           </label>
-          <label>Housing* 
-            <select>
-              <option>Own</option>
-              <option>Rent</option>
-              <option>Other</option>
-            </select>
-          </label>
-          <label>Seeking
-            <select>
-              <option>Car Loan</option>
-              <option>Truck Loan</option>
-              <option>SUV Loan</option>
-            </select>
-          </label>
-          <label>Estimated Credit
-            <select>
-              <option>Excellent</option>
-              <option>Good</option>
-              <option>Fair</option>
-              <option>Poor</option>
-              <option>Prefer not to say</option>
-            </select>
-          </label>
-          <label>Notes (optional)
-            <textarea></textarea>
-          </label>
-          <p class="consent">
-            <input type="checkbox" required> I consent to my application being shared with Turtle Island Financing approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
-          </p>
-          <button type="submit" class="btn">Get Pre-Approved</button>
+
+          <button type="submit" class="btn wide">Get Pre‑Approved</button>
         </form>
       </div>
 
-      <!-- Trust Section -->
-      <aside class="trust-section">
-        <h3>Trust & Certification</h3>
-        <img src="assets/CIB-LogoH-Colour (1).png" 
-     alt="CCAB Certified" 
-     class="ccab-logo">
-        <ul>
-          <li>Certified Aboriginal Business (CAB) Verified by the Canadian Council for Aboriginal Business (CCAB)</li>
+      <aside class="trust">
+        <h4>Trust &amp; Certification</h4>
+        <div class="ccab-badge">
+          <!-- Use the clean file you already have -->
+          <img src="assets/ccab-cab-badge.png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
+          <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
+        </div>
+        <ul class="bullets">
           <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
-          <li>100% Indigenous-owned and operated</li>
-          <li>OCAP®-aligned, trauma-informed trained staff</li>
+          <li>100% Indigenous‑owned and operated</li>
+          <li>OCAP®‑aligned, trauma‑informed trained staff</li>
         </ul>
+        <div class="disclaimer">
+          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
+        </div>
       </aside>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 Turtle Island Financing. All rights reserved.</p>
+    <div class="container foot">
+      <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
+      <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
+      <em>At Turtle Island Financing, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</em></p>
+      <nav>
+        <a href="#apply">Apply</a>
+        <a href="/supports.html">Supports</a>
+        <a href="/verify.html">Verify</a>
+        <a href="/dealers.html">For Dealers</a>
+        <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
+        <a href="#" onclick="window.alert('Privacy: We share your info only with approved partner dealers for financing.'); return false;">Privacy</a>
+      </nav>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
