--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge">
           <!-- Use the clean file you already have -->
-          <img src="assets/ccab-cab-badge.png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
+          <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
