--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
   <header class="site-header">
     <div class="container nav">
       <a class="brand" href="/">
-        <!-- Using an existing asset so the logo shows up -->
         <img class="logo" src="assets/hero-art.svg" alt="Turtle Island Financing logo" height="40">
         <div class="brand-text">
           <h1>Turtle Island Financing</h1>
-          <p class="tag">100% Indigenous‑Owned • CCAB Certified</p>
+          <p class="tag">100% Indigenous-Owned • CCAB Certified</p>
         </div>
       </a>
       <nav class="top-nav">
         <a class="btn link" href="/supports.html">Supports</a>
-        <a class="btn link" href="/verify.html">Verify</a>
-        <a class="btn link" href="/dealers.html">For Dealers</a>
+        <!-- Removed Verify -->
+        <!-- Removed Dealers -->
         <a class="btn ghost" href="#apply">Apply Now</a>
       </nav>
     </div>
@@ -40,27 +39,26 @@
   <section class="hero">
     <div class="container hero-grid">
       <div class="hero-copy">
-        <h2>Keep Your Tax Savings. Choose With Confidence.</h2>
-        <p class="slogan">At <strong>Turtle Island Financing</strong>, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</p>
-        <p>We protect your Indigenous tax exemption and show every line of your deal transparently. Honest financing with Free, Prior, and Informed Consent (FPIC).</p>
+        <h2>Protect Your Tax Exemption. Protect Your Savings.</h2>
+        <p class="slogan"><strong>Trust and Protection comes through us.</strong> No gimmicks. No pressure. Just transparent financing that honors your rights.</p>
+        <p>Every application flows <strong>through Turtle Island Financing</strong> and is protected by Indigenous standards of respect and transparency (FPIC, OCAP®). We secure financing only through our verified TRC-trained partner network — starting with <strong>Pioneer Auto in Maple Ridge</strong>, the first dealership to complete our Turtle Island TRC Standards onboarding.</p>
         <div class="hero-ctas">
-          <a class="btn" href="#apply">Get Pre‑Approved</a>
-          <a class="btn link" href="#truth">See How It Works</a>
+          <!-- One primary action -->
+          <a class="btn" href="#apply">Protect My Savings → Check If I Qualify</a>
         </div>
         <ul class="pill-list">
           <li>CCAB Certified</li>
-          <li>Trauma‑informed & OCAP®‑trained</li>
-          <li>Approved dealer network (TRC & FPIC)</li>
-          <li>Respectful tax‑exemption handling</li>
+          <li>Trauma-informed & OCAP®-trained</li>
+          <li>Approved TRC-trained partner network</li>
+          <li>Respectful tax-exemption handling</li>
         </ul>
       </div>
       <figure class="hero-art">
-  <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
-  <figcaption class="hero-caption">
-    The only thing fake about Turtle Island Financing is this AI Picture 😅
-  </figcaption>
-</figure>
-
+        <img src="assets/hero-joyful-truck.png" alt="Happy family with their new vehicle — Turtle Island Financing" loading="eager" fetchpriority="high" decoding="async">
+        <figcaption class="hero-caption">
+          Photo for illustration — real smiles from our clients coming soon 🙌
+        </figcaption>
+      </figure>
     </div>
   </section>
 
@@ -77,7 +75,7 @@
           <tr><td>Vehicle Price</td><td>$25,000</td><td>$25,000</td></tr>
           <tr><td>Fees (doc + finance)</td><td>$1,090</td><td>$1,090</td></tr>
           <tr><td>Taxes (GST+PST)</td><td>$3,129.80</td><td>$0 (Exempt)</td></tr>
-          <tr><td>Add‑Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
+          <tr><td>Add-Ons / Cash Back</td><td>$4,780</td><td>$0 (optional)</td></tr>
           <tr><td><strong>Amount Financed</strong></td><td><strong>$34,000</strong></td><td><strong>$26,090</strong></td></tr>
           <tr><td>Monthly Payment (60mo @10%)</td><td>$722</td><td>$554</td></tr>
           <tr><td><strong>Total of Payments</strong></td><td><strong>$43,320</strong></td><td><strong>$33,240</strong></td></tr>
@@ -85,7 +83,7 @@
         </tbody>
       </table>
       <div class="cta-center">
-        <a class="btn wide" href="#apply">Protect My Savings → Apply Now</a>
+        <a class="btn wide" href="#apply">Protect My Savings → Check If I Qualify</a>
       </div>
     </div>
   </section>
@@ -95,20 +93,27 @@
     <div class="container">
       <h3>Why Trust Turtle Island Financing?</h3>
       <ul class="checklist">
-        <li>✅ 100% Indigenous‑owned and proudly <strong>CCAB Certified</strong></li>
-        <li>✅ Trauma‑informed & <strong>OCAP®‑trained</strong> staff safeguard your data</li>
+        <li>✅ 100% Indigenous-owned and proudly <strong>CCAB Certified</strong></li>
+        <li>✅ Trauma-informed & <strong>OCAP®-trained</strong> staff safeguard your data</li>
         <li>✅ 20+ years serving Indigenous communities with dignity</li>
-        <li>✅ Only approved partner dealers trained by us in Indigenous history, Truth & Reconciliation, and our Transparent + FPIC model</li>
+        <li>✅ Financing secured <strong>through Turtle Island Financing</strong> with our approved TRC-trained partner network</li>
+        <li>✅ <strong>Pioneer Auto (Maple Ridge)</strong> — our first verified partner, committed to Turtle Island’s TRC Standards</li>
       </ul>
+
+      <!-- Tiny testimonial block -->
+      <blockquote class="testimonial" style="margin-top:1rem">
+        “I felt safe applying here because I knew my tax exemption wouldn’t be hidden in the numbers. Turtle Island handled everything with respect and connected me with a trusted partner.”
+        <br><span class="muted small">— Community Member</span>
+      </blockquote>
     </div>
   </section>
 
-  <!-- Apply -->
+  <!-- Apply (Two-Step Form) -->
   <section id="apply" class="form-wrap">
     <div class="container grid">
       <div class="form-card">
-        <h3>Quick Pre‑Approval</h3>
-        <p class="muted"><strong>OCAP® Protected:</strong> Your information is handled under Ownership, Control, Access, and Possession — your data remains yours and is only shared with approved partner dealers for financing.</p>
+        <h3>Quick Pre-Approval</h3>
+        <p class="muted"><strong>OCAP® Protected:</strong> Your application is safeguarded under Ownership, Control, Access, and Possession. <strong>Trust and Protection comes through Turtle Island Financing</strong> — we share your details only with our verified partner network to secure financing. Our first TRC-trained partner is <strong>Pioneer Auto in Maple Ridge</strong>, who has agreed to follow our cultural standards in every deal.</p>
 
         <form name="preapproval" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/thank-you.html" id="leadForm">
           <input type="hidden" name="form-name" value="preapproval">
@@ -117,85 +122,97 @@
           <input type="hidden" name="utm_campaign"><input type="hidden" name="utm_term">
           <input type="hidden" name="utm_content">
 
-          <!-- Personal -->
-          <div class="row">
-            <label>Full Name*<input type="text" name="name" required></label>
-            <label>Date of Birth*<input type="date" name="dob" required></label>
-          </div>
-          <div class="row">
-            <label>Email*<input type="email" name="email" required></label>
-            <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604‑555‑0123"></label>
-          </div>
+          <!-- STEP 1: Low-friction -->
+          <fieldset id="step1">
+            <legend class="muted">Step 1 of 2 — Start here (no credit pull)</legend>
+            <div class="row">
+              <label>Full Name*<input type="text" name="name" required></label>
+              <label>Province/Territory*<select name="province_step1" required>
+                <option value="">Select…</option>
+                <option>BC</option><option>AB</option><option>SK</option><option>MB</option>
+                <option>ON</option><option>QC</option><option>NB</option><option>NS</option>
+                <option>PE</option><option>NL</option><option>YT</option><option>NT</option><option>NU</option>
+              </select></label>
+            </div>
+            <div class="row">
+              <label>Email*<input type="email" name="email" required></label>
+              <label>Phone*<input type="tel" name="phone" required placeholder="e.g., 604-555-0123"></label>
+            </div>
+            <div class="row">
+              <label>Seeking<select name="seeking">
+                <option value="">Select…</option><option>Car</option><option>Truck</option><option>SUV</option><option>Van</option>
+              </select></label>
+              <label>Estimated Credit<select name="credit">
+                <option value="">Prefer not to say</option><option>Excellent (720+)</option>
+                <option>Good (660–719)</option><option>Fair (600–659)</option>
+                <option>Building (&lt;600)</option><option>New to credit</option>
+              </select></label>
+            </div>
+            <button type="button" id="toStep2" class="btn wide">Continue →</button>
+          </fieldset>
 
-          <!-- Address -->
-          <div class="row">
-            <label>Street Address*<input type="text" name="address" required></label>
-            <label>City*<input type="text" name="city" required></label>
-          </div>
-          <div class="row">
-            <label>Province/Territory*<select name="province" required>
-              <option value="">Select…</option>
-              <option>BC</option><option>AB</option><option>SK</option><option>MB</option>
-              <option>ON</option><option>QC</option><option>NB</option><option>NS</option>
-              <option>PE</option><option>NL</option><option>YT</option><option>NT</option><option>NU</option>
-            </select></label>
-            <label>Postal Code*<input type="text" name="postal" required></label>
-          </div>
+          <!-- STEP 2: Detailed info (revealed after Step 1) -->
+          <fieldset id="step2" style="display:none">
+            <legend class="muted">Step 2 — A few more details</legend>
 
-          <!-- Employment & Income -->
-          <div class="row">
-            <label>Employer*<input type="text" name="employer" required></label>
-            <label>Monthly Income*<input type="number" name="income" required placeholder="CAD$"></label>
-          </div>
-          <div class="row">
-            <label>Employment Type<select name="employment">
-              <option>Full‑Time</option><option>Part‑Time</option><option>Seasonal</option>
-              <option>Self‑Employed</option><option>Other</option>
-            </select></label>
-            <label>Housing<select name="housing">
-              <option>Own</option><option>Rent</option><option>On‑Reserve</option><option>With Family</option>
-            </select></label>
-          </div>
+            <!-- Personal -->
+            <div class="row">
+              <label>Date of Birth*<input type="date" name="dob"></label>
+              <label>Street Address*<input type="text" name="address"></label>
+            </div>
+            <div class="row">
+              <label>City*<input type="text" name="city"></label>
+              <label>Postal Code*<input type="text" name="postal"></label>
+            </div>
 
-          <!-- Vehicle & Credit -->
-          <div class="row">
-            <label>Seeking<select name="seeking">
-              <option value="">Select…</option><option>Car</option><option>Truck</option><option>SUV</option><option>Van</option>
-            </select></label>
-            <label>Estimated Credit<select name="credit">
-              <option value="">Prefer not to say</option><option>Excellent (720+)</option>
-              <option>Good (660–719)</option><option>Fair (600–659)</option>
-              <option>Building (&lt;600)</option><option>New to credit</option>
-            </select></label>
-          </div>
+            <!-- Employment & Income -->
+            <div class="row">
+              <label>Employer*<input type="text" name="employer"></label>
+              <label>Monthly Income*<input type="number" name="income" placeholder="CAD$"></label>
+            </div>
+            <div class="row">
+              <label>Employment Type<select name="employment">
+                <option>Full-Time</option><option>Part-Time</option><option>Seasonal</option>
+                <option>Self-Employed</option><option>Other</option>
+              </select></label>
+              <label>Housing<select name="housing">
+                <option>Own</option><option>Rent</option><option>On-Reserve</option><option>With Family</option>
+              </select></label>
+            </div>
 
-          <!-- Notes -->
-          <label>Notes (optional)<textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on‑reserve delivery, budget, timeline…"></textarea></label>
+            <!-- Normalized province value for step2 submit -->
+            <input type="hidden" name="province">
 
-          <!-- Consent -->
-          <label class="consent">
-            <input type="checkbox" name="consent" required>
-            I consent to my application being shared with Turtle Island Financing approved partner dealerships for the purpose of securing financing. I understand the dealership will perform a credit check. I agree to receive communications related to my application.
-          </label>
+            <!-- Notes -->
+            <label>Notes (optional) <textarea name="notes" rows="3" placeholder="E.g., seasonal fishing, on-reserve delivery, budget, timeline…"></textarea></label>
 
-          <button type="submit" class="btn wide">Get Pre‑Approved</button>
+            <!-- Consent -->
+            <label class="consent">
+              <input type="checkbox" name="consent">
+              I consent to my application being shared with Turtle Island Financing’s verified partner network for the purpose of securing financing. I understand a licensed lender may perform a credit check. I agree to receive communications related to my application.
+            </label>
+
+            <div class="row" style="gap:.75rem">
+              <button type="button" id="backToStep1" class="btn ghost">← Back</button>
+              <button type="submit" class="btn wide">Get Pre-Approved</button>
+            </div>
+          </fieldset>
         </form>
       </div>
 
       <aside class="trust">
         <h4>Trust &amp; Certification</h4>
         <div class="ccab-badge">
-          <!-- Use the clean file you already have -->
           <img src="assets/CIB-LogoH-Colour (1).png" alt="Certified Aboriginal Business (CAB) — CCAB" height="52">
           <div class="ccab-text"><strong>Certified Aboriginal Business (CAB)</strong><br>Verified by the Canadian Council for Aboriginal Business (CCAB)</div>
         </div>
         <ul class="bullets">
           <li>Brooke Ashley Group Inc. (o/a Turtle Island Financing)</li>
-          <li>100% Indigenous‑owned and operated</li>
-          <li>OCAP®‑aligned, trauma‑informed trained staff</li>
+          <li>100% Indigenous-owned and operated</li>
+          <li>OCAP®-aligned, trauma-informed trained staff</li>
         </ul>
         <div class="disclaimer">
-          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing connects applicants with Canadian partner dealerships. Approvals, rates, and terms are decided by the dealer and their lenders.</p>
+          <p class="muted small"><strong>Disclaimer:</strong> Turtle Island Financing secures financing exclusively through its Indigenous-aligned partner network. Approvals, rates, and terms are provided by licensed lenders. <strong>Pioneer Auto (Maple Ridge)</strong> is our first verified partner dealership, operating under Turtle Island’s TRC Standards.</p>
         </div>
       </aside>
     </div>
@@ -206,17 +223,59 @@
     <div class="container foot">
       <p>© <span id="year"></span> Turtle Island Financing — a trade name of <strong>Brooke Ashley Group Inc.</strong><br>
       <span class="muted">Certified Aboriginal Business (CAB) — CCAB</span><br>
-      <em>At Turtle Island Financing, you’re not just tax‑exempt — you’re exempt from bad deals, gimmicks, and pressure too.</em></p>
+      <em>Trust and Protection comes through us — Turtle Island Financing.</em></p>
       <nav>
         <a href="#apply">Apply</a>
         <a href="/supports.html">Supports</a>
-        <a href="/verify.html">Verify</a>
-        <a href="/dealers.html">For Dealers</a>
+        <!-- Removed Verify -->
+        <!-- Removed Dealers -->
         <a href="#" onclick="window.alert('Email: hello@turtleislandfinancing.ca'); return false;">Contact</a>
-        <a href="#" onclick="window.alert('Privacy: We share your info only with approved partner dealers for financing.'); return false;">Privacy</a>
+        <a href="#" onclick="window.alert('Privacy: We share your info only with our verified partner network to secure financing.'); return false;">Privacy</a>
       </nav>
     </div>
   </footer>
+
+  <!-- Minimal inline JS to power the two-step form and keep it Netlify-friendly -->
+  <script>
+    (function(){
+      const step1 = document.getElementById('step1');
+      const step2 = document.getElementById('step2');
+      const toStep2 = document.getElementById('toStep2');
+      const back = document.getElementById('backToStep1');
+
+      const req = (el, on) => { if(!el) return; on ? el.setAttribute('required','') : el.removeAttribute('required'); };
+
+      function goStep2(){
+        // copy province from step1 select into hidden canonical "province" field
+        const p1 = document.querySelector('[name="province_step1"]');
+        const p2 = document.querySelector('[name="province"]');
+        if(p1 && p2) p2.value = p1.value;
+
+        // Make step2 fields required only when visible
+        ['dob','address','city','postal','employer','income','consent'].forEach(n=>{
+          const f = document.querySelector('[name="'+n+'"]');
+          req(f, true);
+        });
+
+        step1.style.display = 'none';
+        step2.style.display = '';
+        document.getElementById('apply').scrollIntoView({behavior:'smooth', block:'start'});
+      }
+      function goStep1(){
+        ['dob','address','city','postal','employer','income','consent'].forEach(n=>{
+          const f = document.querySelector('[name="'+n+'"]');
+          req(f, false);
+        });
+        step2.style.display = 'none';
+        step1.style.display = '';
+      }
+      if(toStep2) toStep2.addEventListener('click', goStep2);
+      if(back) back.addEventListener('click', goStep1);
+
+      // keep year current
+      const y = document.getElementById('year'); if(y) y.textContent = new Date().getFullYear();
+    })();
+  </script>
 
   <script src="script.js"></script>
 </body>
